@@ -1464,6 +1464,7 @@ od(0, t^16 + 1), Mod(3/8*t^11, t^16 + 1), Mod(0, t^16 + 1)]
 ["S_3/2(G_0(16, 1))", "M_3/2(G_0(16, 1))"]
 ["F_4(-3, -4)", "F_3(1, -3)"]
 1/72
+[1/4, 6, 6, 24, 6, 36, 24, 48, 6, 78, 36]
 [1/24, 10, 90, 280, 730, 1260, 2520, 3440, 5850, 7570, 11340]
 [10]~
 [0, 1, 0, 0, 0, -2, 0, 0, 0, -3, 0, 0, 0, 6, 0, 0, 0, 2, 0, 0, 0]
@@ -1624,4 +1625,4 @@ od(0, t^16 + 1), Mod(3/8*t^11, t^16 + 1), Mod(0, t^16 + 1)]
   ***   at top-level: ...,0);[F]=mfeigenbasis(mf);mfpow(F,3)
   ***                                             ^----------
   *** mfpow: sorry, changing cyclotomic fields in mf is not yet implemented.
-Total time spent: 17053
+Total time spent: 7174
