@@ -4,6 +4,7 @@ Done for version 2.14.0 (released ??/??/2020):
      1- slowdown in zeta (e.g. zeta(Pi) at \p500)
      2- GC error in idealinv [#2258]
      3- qfminim inefficiency (initial bound from non-LLL-reduced matrix)
+     4- mfshimura in weight 3/2 => oo loop
 
   Added
 HC   1- new GP function eulerreal
